for some reason, assigning opacity: .99; to card face and back, fixed the backface-visibility: hidden; problems in Chrome

--- a/src/card.css
+++ b/src/card.css
@@ -4,6 +4,18 @@
   box-sizing: border-box;
 }
 
+.cardBack,
+.cardFace {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    opacity: .99;
+}
 
 .discardRow {
   height: 10%;
@@ -19,7 +31,7 @@
   height: 90%;
   width: 100%;
   display: flex;
-  justify-items: end;
+  justify-items: space-evenly;
   flex-direction: row;
   flex-wrap: wrap;
 }
@@ -28,7 +40,6 @@
   height: 25%;
   margin: 0;
   padding: 3.174% 2%; 
-  box-sizing: border-box;
 }
 .cardMove{
   width: 100%;
@@ -37,29 +48,19 @@
   padding: 0;
 }
 .card {
-    width: 100%; 
-    height: 100%;
-    -webkit-transition: -webkit-transform .4s;
-    -moz-transition: -moz-transform .4s;
-    -o-transition: -o-transform .4s;
-    transition: transform .4s;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    transform-style: preserve-3d;
+  position: relative;
+  width: 100%; 
+  height: 100%;
+  -webkit-transition: -webkit-transform .4s;
+  -moz-transition: -moz-transform .4s;
+  -o-transition: -o-transform .4s;
+  transition: transform .4s;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
 
-.cardBack,
-.cardFace {
-    width: 100%;
-    height: 100%;
-    display: block;
-    position: absolute;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
 
 .discarded,
 .cardMove {
